[gd_scene load_steps=32 format=2]

[ext_resource path="res://img/art/marisaIndy.png" type="Texture" id=1]
[ext_resource path="res://img/art/marisaNose.png" type="Texture" id=2]
[ext_resource path="res://img/art/marisaMelon.png" type="Texture" id=3]
[ext_resource path="res://img/Logo.png" type="Texture" id=4]
[ext_resource path="res://audio/marisa.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/Misc/Main.gd" type="Script" id=6]
[ext_resource path="res://scenes/Misc/Menu.gd" type="Script" id=7]
[ext_resource path="res://misc/Merchant Copy.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://img/pixelart/bg.png" type="Texture" id=9]
[ext_resource path="res://img/Logo1.png" type="Texture" id=10]
[ext_resource path="res://scenes/World/World.tscn" type="PackedScene" id=11]
[ext_resource path="res://img/Logo2.png" type="Texture" id=12]
[ext_resource path="res://audio/thump.mp3" type="AudioStream" id=13]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=14]
[ext_resource path="res://img/pixelart/controller.png" type="Texture" id=15]
[ext_resource path="res://scenes/Misc/Intro.tscn" type="PackedScene" id=16]
[ext_resource path="res://img/art/marisaBroom.png" type="Texture" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.568627 )

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="ImageTexture" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.815686 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
expand_margin_bottom = 36.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.968627, 0.937255, 0.623529, 0.533333 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
expand_margin_bottom = 36.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.568627 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
expand_margin_bottom = 36.0

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )
Button/colors/font_color = Color( 0.94902, 1, 1, 1 )
Button/colors/font_color_focus = Color( 0.478431, 0.854902, 0.921569, 1 )
Button/colors/font_color_hover = Color( 0.968627, 0.937255, 0.623529, 1 )
Button/colors/font_color_pressed = Color( 0.478431, 0.854902, 0.921569, 1 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )
HSlider/icons/grabber = SubResource( 2 )
HSlider/icons/grabber_disabled = SubResource( 3 )
HSlider/icons/grabber_highlight = SubResource( 4 )
HSlider/icons/tick = SubResource( 5 )
HSlider/styles/grabber_area = SubResource( 6 )
HSlider/styles/grabber_area_highlight = SubResource( 7 )
HSlider/styles/slider = SubResource( 8 )
VBoxContainer/constants/separation = 10

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 2
outline_color = Color( 0.054902, 0.0392157, 0.203922, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 35
outline_size = 2
outline_color = Color( 0.054902, 0.0392157, 0.203922, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.172549 )

[node name="Main" type="Node"]
script = ExtResource( 6 )
Level = ExtResource( 11 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 10 )
script = ExtResource( 7 )

[node name="Thump" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 13 )
bus = "Music"

[node name="Bg" type="Sprite" parent="Menu"]
position = Vector2( 709, 444 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Main" type="VBoxContainer" parent="Menu"]
visible = false
margin_left = 34.0
margin_top = 32.0
margin_right = 412.0
margin_bottom = 372.0

[node name="Label" type="Label" parent="Menu/Main"]
margin_right = 378.0
margin_bottom = 105.0
text = "

"
align = 1

[node name="Logo" type="AnimatedSprite" parent="Menu/Main/Label"]
visible = false
position = Vector2( 195, 53 )
scale = Vector2( 0.384367, 0.384367 )
frames = SubResource( 12 )

[node name="Start" type="Button" parent="Menu/Main"]
margin_top = 115.0
margin_right = 378.0
margin_bottom = 148.0
text = "Start game"

[node name="HowTo" type="Button" parent="Menu/Main"]
margin_top = 158.0
margin_right = 378.0
margin_bottom = 191.0
text = "Tutorial"

[node name="Controls" type="Button" parent="Menu/Main"]
margin_top = 201.0
margin_right = 378.0
margin_bottom = 234.0
text = "Controls"

[node name="Credits" type="Button" parent="Menu/Main"]
margin_top = 244.0
margin_right = 378.0
margin_bottom = 277.0
text = "Credits"

[node name="HSlider" type="HSlider" parent="Menu/Main"]
margin_top = 287.0
margin_right = 378.0
margin_bottom = 287.0
value = 75.0

[node name="Volume" type="Label" parent="Menu/Main/HSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
text = "Volume"
align = 1

[node name="MarisaIndy" type="Sprite" parent="Menu/Main"]
position = Vector2( 854, 285 )
scale = Vector2( 0.530417, 0.530417 )
texture = ExtResource( 1 )

[node name="Controls" type="VBoxContainer" parent="Menu"]
margin_left = 34.0
margin_top = 32.0
margin_right = 412.0
margin_bottom = 372.0

[node name="Label" type="Label" parent="Menu/Controls"]
margin_right = 378.0
margin_bottom = 33.0
text = "Controls"
align = 1

[node name="Label2" type="Label" parent="Menu/Controls"]
margin_top = 43.0
margin_right = 378.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 11 )
text = "Left / Right
Down
Up
Space
A
S
D
Q,W,E

ESC"

[node name="Label3" type="Label" parent="Menu/Controls/Label2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 147.0
margin_right = -91.0
custom_fonts/font = SubResource( 11 )
text = "[ ]
[ ]
[ ]
[shoulder]
[ ]
[ ]
[ ]
[ ]

[start]"
align = 1

[node name="Label4" type="Label" parent="Menu/Controls/Label2"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -113.0
margin_right = -1.0
custom_fonts/font = SubResource( 11 )
text = "Rotate
Brake
Climb
Jump
MELON
INDY
NOSEGRAB
Cast

Quit"
align = 2

[node name="Label5" type="Label" parent="Menu/Controls/Label2"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 109.0
margin_right = 416.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 14 )
text = "Hold TRICK buttons while
in air to shoot some bullets.

Spinning in the air adds more bullets and doing TRICKS gives your bullets different properties!"
align = 1
autowrap = true

[node name="Controller" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 216, 14 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3

[node name="Controller2" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 216, 44 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3
frame = 1

[node name="Controller3" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 216, 74 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3
frame = 1

[node name="Controller4" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 217, 226 )
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3
frame = 2

[node name="Controller5" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 217, 135 )
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3
frame = 2

[node name="Controller6" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 217, 165 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3
frame = 2

[node name="Controller7" type="Sprite" parent="Menu/Controls/Label2"]
position = Vector2( 217, 196 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
hframes = 3
frame = 2

[node name="HowTo" type="Button" parent="Menu/Controls"]
margin_top = 350.0
margin_right = 378.0
margin_bottom = 383.0
text = "Tutorial"

[node name="Back" type="Button" parent="Menu/Controls"]
margin_top = 393.0
margin_right = 378.0
margin_bottom = 426.0
text = "Back"

[node name="MarisaIndy2" type="Sprite" parent="Menu/Controls"]
position = Vector2( 866, 272 )
scale = Vector2( 0.530417, 0.530417 )
texture = ExtResource( 2 )

[node name="Tutorial" type="VBoxContainer" parent="Menu"]
visible = false
margin_left = 34.0
margin_top = 32.0
margin_right = 412.0
margin_bottom = 372.0

[node name="Label" type="Label" parent="Menu/Tutorial"]
margin_right = 378.0
margin_bottom = 33.0
text = "Tutorial"
align = 1

[node name="Label2" type="Label" parent="Menu/Tutorial"]
margin_top = 43.0
margin_right = 378.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 11 )
text = "Marisa has made you a powerpoint presentation on how to become the best snowboarder in Gensokyo."
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Menu/Tutorial"]
margin_top = 170.0
margin_right = 378.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 11 )
text = "Please check it out on your internet browser."
align = 1
autowrap = true

[node name="Powerpoint" type="Button" parent="Menu/Tutorial"]
margin_top = 237.0
margin_right = 378.0
margin_bottom = 270.0
custom_styles/hover = SubResource( 13 )
text = "MarisasGuideToSn..ppt"

[node name="Back" type="Button" parent="Menu/Tutorial"]
margin_top = 280.0
margin_right = 378.0
margin_bottom = 313.0
text = "Back"

[node name="MarisaNose" type="Sprite" parent="Menu/Tutorial"]
position = Vector2( 904, 288 )
scale = Vector2( 0.530417, 0.530417 )
texture = ExtResource( 3 )

[node name="Credits" type="VBoxContainer" parent="Menu"]
visible = false
margin_left = 34.0
margin_top = 32.0
margin_right = 412.0
margin_bottom = 372.0

[node name="Label" type="Label" parent="Menu/Credits"]
margin_right = 378.0
margin_bottom = 33.0
text = "Pintin Anime Tiimi"
align = 1

[node name="Label2" type="Label" parent="Menu/Credits"]
margin_top = 43.0
margin_right = 378.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 11 )
text = "- Game Design -
jsloth"
align = 1

[node name="Label3" type="Label" parent="Menu/Credits"]
margin_top = 110.0
margin_right = 378.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 11 )
text = "- Producer -
Pintti"
align = 1

[node name="Label5" type="Label" parent="Menu/Credits"]
margin_top = 177.0
margin_right = 378.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 11 )
text = "- Art -
DebPet"
align = 1

[node name="Label4" type="Label" parent="Menu/Credits"]
margin_top = 244.0
margin_right = 378.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 11 )
text = "- Music -
borb"
align = 1

[node name="Back" type="Button" parent="Menu/Credits"]
margin_top = 311.0
margin_right = 378.0
margin_bottom = 344.0
text = "Back"

[node name="MarisaBroom" type="Sprite" parent="Menu/Credits"]
position = Vector2( 775, 341 )
scale = Vector2( 0.621875, 0.621875 )
texture = ExtResource( 17 )

[node name="Click" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 14 )
bus = "Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="Intro" parent="." instance=ExtResource( 16 )]
visible = false

[connection signal="pressed" from="Menu/Main/Start" to="Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Main/HowTo" to="Menu" method="_on_HowTo_pressed"]
[connection signal="pressed" from="Menu/Main/Controls" to="Menu" method="_on_Controls_pressed"]
[connection signal="pressed" from="Menu/Main/Credits" to="Menu" method="_on_Credits_pressed"]
[connection signal="value_changed" from="Menu/Main/HSlider" to="Menu" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Menu/Controls/HowTo" to="Menu" method="_on_HowTo_pressed"]
[connection signal="pressed" from="Menu/Controls/Back" to="Menu" method="_on_Back_pressed"]
[connection signal="pressed" from="Menu/Tutorial/Powerpoint" to="Menu" method="_on_Powerpoint_pressed"]
[connection signal="pressed" from="Menu/Tutorial/Back" to="Menu" method="_on_Back_pressed"]
[connection signal="pressed" from="Menu/Credits/Back" to="Menu" method="_on_Back_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
